--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -32,8 +32,8 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: var(--font-default);
-  color: var(--color-default);
+  font-family: sans-serif, Bold;
+  color: #F7F7F7;
 }
 
 a {
@@ -61,13 +61,82 @@ h6 {
 section {
   overflow: hidden;
   padding: 80px 0;
+  margin: 100px 100px;
 }
 
 .section-bg {
-  background-color: #eee;
+  background-color: #E6C6BF;
 }
 
-.section-header {
+.auto-group-jdhu-LcS {
+    flex-shrink: 0;
+    height: 432.6rem;
+    position: relative;
+    width: 100%;
+  }
+
+    .group-172-q3Q {
+      height: 99.1rem;
+      left: 10rem;
+      position: absolute;
+      top: 0;
+      width: 131.2rem;
+    }
+
+      .rectangle-18-XS2 {
+        background-color: #b5c5c5;
+        border-radius: 3rem 3rem 0 0;
+        height: 90.1rem;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 131.2rem;
+      }
+      .about-us-pR8 {
+        color: #f7f7f7;
+        font-family: Abril Fatface, 'Source Sans Pro';
+        font-size: 6.4rem;
+        font-weight: 400;
+        height: 8.7rem;
+        left: 23.1rem;
+        line-height: 1.3475;
+        position: absolute;
+        text-align: center;
+        top: 15.4rem;
+        white-space: nowrap;
+        width: 28rem;
+      }
+      .rectangle-19-gy8 {
+        background-color: #d9d9d9;
+        height: 65.5rem;
+        left: 72.3rem;
+        position: absolute;
+        top: 12.7rem;
+        width: 58.9rem;
+      }
+      .rectangle-20-zD8 {
+        height: 40.5rem;
+        left: 6.5rem;
+        object-fit: cover;
+        position: absolute;
+        top: 28.3rem;
+        vertical-align: top;
+        width: 63.8rem;
+      }
+      .n3unique-wedding-organizer-adalah-tim-wedding-coordinator-yang-bekerja-bersama-untuk-memberikan-pelayanan-jasa-pengorganisasian-segala-aktivitas-yang-berkaitan-dengan-kebutuhan-acara-pernikahan-kami-memahami-bagaimanapun-juga-pernikahan-hanya-sekali-dalam-seumur-hidup-maka-dari-itu-sangat-penting-dan-harus-berjalan-sukses-oleh-karena-itu-kami-n3unique-wo-team-bekerja-sepenuhnya-untuk-anda-gre {
+        color: #666666;
+        font-family: Montserrat, 'Source Sans Pro';
+        font-size: 3.2rem;
+        font-weight: 400;
+        height: 82.7rem;
+        left: 74.9rem;
+        letter-spacing: -0.048rem;
+        line-height: 1.3589999676;
+        position: absolute;
+        top: 16.4rem;
+        width: 53.4rem;
+      }
+/* .section-header {
   text-align: center;
   padding-bottom: 30px;
 }
@@ -78,7 +147,7 @@ section {
   font-weight: 400;
   margin: 0;
   padding: 0;
-  color: #7f7f90;
+  color: #E6C6BF;
   text-transform: uppercase;
   font-family: var(--font-default);
 }
@@ -87,12 +156,12 @@ section {
   margin: 0;
   font-size: 48px;
   font-weight: 400;
-  font-family: var(--font-primary);
+  font-family: sans-serif, Bold;
 }
 
 .section-header p span {
-  color: var(--color-primary);
-}
+  color: #B5C5C5;
+} */
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -601,15 +670,15 @@ section {
   font-family: var(--font-secondary);
 }
 
-.about .call-us {
+/* .about .call-us {
   left: 10%;
   right: 10%;
   bottom: 10%;
-  background-color: #fff;
+  background-color:#B5C5C5;
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.08);
   padding: 20px;
   text-align: center;
-}
+} */
 
 .about .call-us h4 {
   font-size: 24px;
@@ -639,7 +708,7 @@ section {
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: var(--color-primary);
+  color: #B5C5C5;
 }
 
 .about .content p:last-child {
@@ -649,7 +718,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(var(--color-primary) 50%, rgba(206, 18, 18, 0.4) 52%);
+  background: radial-gradient(var(--color-primary) 50%, #B5C5C5(206, 18, 18, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -1543,7 +1612,7 @@ section {
   background-size: cover;
   position: relative;
   min-height: 60vh;
-  padding: 90px 0 1px 0;
+  padding: 170px 0 120px 0;
 }
 
 .hero h2 {
